Changelog
=========

1.2 (unreleased)
----------------
- Added more strings classifiers items for this packages [macagua]
- Updated diazo theme manifest file [macagua]
- Added preview file for diazo theme manifest file [macagua]

1.1 (2011-07-30)
----------------
- Fixed doctype [giacomos]

1.0 (2011-06-19)
----------------

- Initial release [giacomos]