@@ -1,0 +1,4 @@
+<theme>
+    <name>plonetheme.woodexperience</name>
+    <enabled>false</enabled>
+</theme>
